@@ -1,5 +1,9 @@
 ANTLR v4 Honey Badger
 
+November 3, 2012
+
+* add option -exact-ambiguities to TestRig
+
 October 29, 2012
 
 * Sam fixes nongreedy more.
